@@ -179,6 +179,7 @@
 				<configuration>
 					<!-- required due to https://github.com/apache/maven-surefire/pull/263 -->
 					<argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED</argLine>
+					<argLine>--add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 
